--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,4 @@
 // complex
 @import "components/complex/header/header.scss";
 @import "components/complex/footer/footer.scss";
+@import "components/complex/hero/hero.scss";
