--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,4 @@
 @import "components/complex/header/header.scss";
 @import "components/complex/footer/footer.scss";
 @import "components/complex/hero/hero.scss";
+@import "components/complex/contacts/contacts.scss";
