--- a/src/components/complex/header/header.scss
+++ b/src/components/complex/header/header.scss
@@ -4,9 +4,11 @@
   left: 0;
   z-index: 90;
   width: 100%;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
   transition: $dur ease;
 
   &--scrolling {
+    background: none;
     background-color: #fff;
 
     .header {
@@ -70,6 +72,14 @@
 
     &:last-child {
       margin-right: 0;
+    }
+
+    &--active {
+      .header {
+        &__link {
+          color: $primary;
+        }
+      }
     }
   }
 
