--- a/src/components/complex/header/header.html
+++ b/src/components/complex/header/header.html
@@ -6,22 +6,22 @@
 
     <ul class="header__nav">
       <li class="header__item {{ 'header__item--active' if activeMenuItem == 'shops' else '' }}">
-        <a href="" class="header__link">
+        <a href="/shops.html" class="header__link">
           Магазины
         </a>
       </li>
       <li class="header__item {{ 'header__item--active' if activeMenuItem == 'news' else '' }}">
-        <a href="" class="header__link">
+        <a href="/news.html" class="header__link">
           Новости и акции
         </a>
       </li>
       <li class="header__item {{ 'header__item--active' if activeMenuItem == 'about' else '' }}">
-        <a href="" class="header__link">
+        <a href="/about.html" class="header__link">
           О торговом центре
         </a>
       </li>
       <li class="header__item {{ 'header__item--active' if activeMenuItem == 'contacts' else '' }}">
-        <a href="" class="header__link">
+        <a href="/contacts.html" class="header__link">
           Контакты
         </a>
       </li>
@@ -35,22 +35,22 @@
   <div class="wrapper">
     <ul class="mobile-menu__nav">
       <li class="mobile-menu__item">
-        <a href="" class="mobile-menu__link">
+        <a href="/shops.html" class="mobile-menu__link">
           Магазины
         </a>
       </li>
       <li class="mobile-menu__item">
-        <a href="" class="mobile-menu__link">
+        <a href="/news.html" class="mobile-menu__link">
           Новости и акции
         </a>
       </li>
       <li class="mobile-menu__item">
-        <a href="" class="mobile-menu__link">
+        <a href="/about.html" class="mobile-menu__link">
           О торговом центре
         </a>
       </li>
       <li class="mobile-menu__item">
-        <a href="" class="mobile-menu__link">
+        <a href="/contacts.html" class="mobile-menu__link">
           Контакты
         </a>
       </li>
