--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,4 @@
 @import "components/complex/hero/hero.scss";
 @import "components/complex/contacts/contacts.scss";
 @import "components/complex/secondary-hero/secondary-hero.scss";
+@import "components/complex/shops-list/shops-list.scss";
